Fix pre blocks on small screens

--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,9 @@ ul, ol {
   list-style-position: inside;
 }
 li { padding: 4px 0; }
+pre {
+  white-space: pre-wrap;
+}
 code {
   color: var(--secondary);
   line-height: 1.4em;
